# SLAM

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
launch/: earth_world.launch  full_stack.launch  global_planner.launch  local_planner.launch  static_tf.launch  turtlebot3_earth_slam.launch
maps/: map.pgm  map.yaml  map1.pgm  map1.yaml
maps/worlds/: earth.world
rviz/: nav_config.rviz
scripts/: global_planner.py  kinematic_controller.py  local_planner.py
